fix(truncation): fix truncation for cards on smaller screen
fix the truncation on the list items inside of cards on the dashboards for demo screens

--- a/src/app/dashboard-widgets/add-codebase-widget/add-codebase-widget.component.scss
+++ b/src/app/dashboard-widgets/add-codebase-widget/add-codebase-widget.component.scss
@@ -9,6 +9,9 @@
   position: absolute;
   left: 50px;
   width: 475px;
+  @media (max-width: 1281px) {
+    width: 83%;
+  }
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
